<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/TEXTO_TITULO"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_dni_denunciante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/TEXTO_DNI"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/TEXTO_APELLIDO"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/TEXTO_NOMBRE"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_lugar_del_hecho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="LUGAR DEL HECHO"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_horario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/TEXTO_HORARIO"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_nombre_agente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/TEXTO_AGENTE"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_tipo_de_delito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="TIPO DE DELITO"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_horario_de_denuncia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="HORARIO DE LA DENUNCIA"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_codigo_de_seguridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="COD.SEGUIRDAD"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_breve_descripcion"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:ems="10"
            android:gravity="start"
            android:hint="BREVE DESCRIPCION"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/boton_enviar_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ENVIAR" />

    </LinearLayout>


</ScrollView>