<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:background="#808080"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/button_inicio_sesion"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_usuario"
            android:autofillHints="null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ET_USUARIO"

            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_password"
            android:autofillHints="null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ET_CONTRASE"

            android:inputType="textPassword" />

        <Button
            android:id="@+id/boton_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#808080"
            android:text="@string/button_inicio_sesion"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/boton_registrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#808080"
            android:text="@string/BT_Registrarme"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/imagenprofin2" />
    </LinearLayout>

</LinearLayout>